--- a/index.ipynb
+++ b/index.ipynb
@@ -23,14 +23,14 @@
     "| 11/06| Introdução a lógica: Operadores e expressões lógicas; Operadores e expressões aritméticas; Descrição e uso do comando: se-então-senão. | [Operadores e Expressões relacionais e lógicas](aula-05.ipynb) |\n",
     "| 16/06| Introdução a lógica: Operadores e expressões lógicas; Operadores e expressões aritméticas; Descrição e uso do comando: se-então-senão. | [Estruturas de controle condicional](aula-06.ipynb) |\n",
     "| 18/06| Introdução a lógica: Operadores e expressões lógicas; Operadores e expressões aritméticas; Descrição e uso do comando: se-então-senão. | [Exercícios de fixação e revisão](revisao-if.ipynb) |\n",
-    "| --/--| PROVA 2 ||\n",
-    "| --/--| Estruturas de repetição: Descrição e uso do comando enquanto-faça; Descrição e uso do comando faça-enquanto; Descrição e uso do comando para. | [Estruturas de controle de repetição](aula-07.ipynb) |\n",
-    "| --/--| Estruturas de repetição: Descrição e uso do comando enquanto-faça; Descrição e uso do comando faça-enquanto; Descrição e uso do comando para. | [Exercícios de fixação e revisão](revisao-loop.ipynb) |\n",
+    "| 07/07| Estruturas de repetição: Descrição e uso do comando enquanto-faça; Descrição e uso do comando faça-enquanto; Descrição e uso do comando para. | [Estruturas de controle de repetição](aula-07.ipynb) |\n",
+    "| 09/07| Estruturas de repetição: Descrição e uso do comando enquanto-faça; Descrição e uso do comando faça-enquanto; Descrição e uso do comando para. | [Exercícios de fixação e revisão](revisao-loop.ipynb) |\n",
+    "| 11/08| PROVA 2 | [Estruturas de controle condicional](prova.ipynb) |\n",
+    "| 13/08| PROVA 3 | [Estruturas de controle de repetição](prova.ipynb) |\n",
     "| --/--| Ambiente de programação: Descrição do ambiente e sua particularidades; Aplicação do ambiente. | Arduino IDE |\n",
     "| --/--| Estruturas de repetição: Descrição e uso do comando enquanto-faça; Descrição e uso do comando faça-enquanto; Descrição e uso do comando para. | Aula prática: controlando servo motores com arduino |\n",
     "| --/--| Estruturas de repetição: Descrição e uso do comando enquanto-faça; Descrição e uso do comando faça-enquanto; Descrição e uso do comando para. | Aula prática: controlando motores DC com arduino |\n",
     "| --/--| Ambiente de programação: Descrição do ambiente e sua particularidades; Aplicação do ambiente. | Microsoft Visual Studio |\n",
-    "| --/--| PROVA 3 ||\n",
     "| --/--| Modularização: Declaração, estruturação e chamada de funções: Declaração; passagem de parâmetro; Retorno de valores. | Funções e Recursão |\n",
     "| --/--| Modularização: Declaração, estruturação e chamada de funções: Declaração; passagem de parâmetro; Retorno de valores. | Projeto de funções  |\n",
     "| --/--| Modularização: Declaração, estruturação e chamada de funções: Declaração; passagem de parâmetro; Retorno de valores. | Exercícios de revisão |\n",
