--- a/index.ipynb
+++ b/index.ipynb
@@ -17,7 +17,7 @@
     "| 03/03| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | [Representação numérica em computadores](aula-04.1.ipynb) |\n",
     "| 05/03| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | [Variáveis](aula-03.ipynb) e [Ponteiros](aula-04.ipynb) |\n",
     "| 10/03| Ambiente de programação: Descrição do ambiente e sua particularidades; Aplicação do ambiente | [TinkerCad](https://www.tinkercad.com) |\n",
-    "| ~~12/03~~| ~~PROVA 1~~ | ADIADA ATÉ O RETORNO DAS AULAS PRESENCIAIS OU NOVAS ORIENTACÕES |\n",
+    "| ~~12/03~~| ~~PROVA 1~~ | CANCELADA |\n",
     "| ~~17/03~~| ~~Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere~~ | ~~Aula prática: controlando o temporizador de um semáforo com LED e arduino~~ |\n",
     "| 09/06| Introdução a lógica: Operadores e expressões lógicas; Operadores e expressões aritméticas; Descrição e uso do comando: se-então-senão. | [Introdução a Lógica Formal com exemplos em Prolog](aula-05.1.ipynb) |\n",
     "| 11/06| Introdução a lógica: Operadores e expressões lógicas; Operadores e expressões aritméticas; Descrição e uso do comando: se-então-senão. | [Operadores e Expressões relacionais e lógicas](aula-05.ipynb) |\n",
@@ -25,16 +25,12 @@
     "| 18/06| Introdução a lógica: Operadores e expressões lógicas; Operadores e expressões aritméticas; Descrição e uso do comando: se-então-senão. | [Exercícios de fixação e revisão](revisao-if.ipynb) |\n",
     "| 07/07| Estruturas de repetição: Descrição e uso do comando enquanto-faça; Descrição e uso do comando faça-enquanto; Descrição e uso do comando para. | [Estruturas de controle de repetição](aula-07.ipynb) |\n",
     "| 09/07| Estruturas de repetição: Descrição e uso do comando enquanto-faça; Descrição e uso do comando faça-enquanto; Descrição e uso do comando para. | [Exercícios de fixação e revisão](revisao-loop.ipynb) |\n",
-    "| 11/08| PROVA 2 | [Estruturas de controle condicional](prova.ipynb) |\n",
-    "| 13/08| PROVA 3 | [Estruturas de controle de repetição](prova.ipynb) |\n",
-    "| --/--| Ambiente de programação: Descrição do ambiente e sua particularidades; Aplicação do ambiente. | Arduino IDE |\n",
-    "| --/--| Estruturas de repetição: Descrição e uso do comando enquanto-faça; Descrição e uso do comando faça-enquanto; Descrição e uso do comando para. | Aula prática: controlando servo motores com arduino |\n",
-    "| --/--| Estruturas de repetição: Descrição e uso do comando enquanto-faça; Descrição e uso do comando faça-enquanto; Descrição e uso do comando para. | Aula prática: controlando motores DC com arduino |\n",
-    "| --/--| Ambiente de programação: Descrição do ambiente e sua particularidades; Aplicação do ambiente. | Microsoft Visual Studio |\n",
-    "| --/--| Modularização: Declaração, estruturação e chamada de funções: Declaração; passagem de parâmetro; Retorno de valores. | Funções e Recursão |\n",
-    "| --/--| Modularização: Declaração, estruturação e chamada de funções: Declaração; passagem de parâmetro; Retorno de valores. | Projeto de funções  |\n",
-    "| --/--| Modularização: Declaração, estruturação e chamada de funções: Declaração; passagem de parâmetro; Retorno de valores. | Exercícios de revisão |\n",
-    "| --/--| PROVA 4 | \n",
+    "| 11/08| PROVA 2 | [Estruturas de controle condicional](prova2.ipynb) |\n",
+    "| 13/08| PROVA 3 | [Estruturas de controle de repetição](prova3.ipynb) |\n",
+    "| 08/09| Modularização: Declaração, estruturação e chamada de funções: Declaração; passagem de parâmetro; Retorno de valores. | [Funções e Recursão](aula-09.ipynb) |\n",
+    "| 10/09| Modularização: Declaração, estruturação e chamada de funções: Declaração; passagem de parâmetro; Retorno de valores. | [Projeto de funções](aula-09.1.ipynb)  |\n",
+    "| 15/09| Modularização: Declaração, estruturação e chamada de funções: Declaração; passagem de parâmetro; Retorno de valores. | [Exercícios de revisão](lista-03.ipynb) |\n",
+    "| 17/09| PROVA 4 | [Modularização](prova4.ipynb) |\n",
     "| --/--| Estruturas de dados homogêneas: Definição, declaração, preenchimento e leitura de vetores; Definição, declaração, preenchimento de matrizes. | Vetores, Strings e Matrizes e Implementação do jogo da velha |\n",
     "| --/--| Estruturas de dados homogêneas: Definição, declaração, preenchimento e leitura de vetores; Definição, declaração, preenchimento de matrizes. | Aula prática 5 - controlando um braço robótico usando Arduino e Potenciometros |\n",
     "| --/--| Estruturas de dados homogêneas: Definição, declaração, preenchimento e leitura de vetores; Definição, declaração, preenchimento de matrizes. | Aula prática 6 - controlando um carro robótico usando Arduino e PID |\n",
